# order/swagger.yaml
@@ -158,4 +158,35 @@ paths:
           description: internal server error   
 
 
-  
+  /order/update:
+    patch:
+      tags:
+        - Internal
+      summary: Store PaymentID
+      security:
+        - bearerAuth: []     
+      requestBody:
+          required: true
+          content:
+            application/x-www-form-urlencoded:
+              schema:
+                type: object
+                properties:
+                  orderid:
+                    type: integer   
+                  razorpay_payment_id:
+                    type: string      
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string 
+        400:
+          description: Bad request
+        500:
+          description: internal server error 
